# WealthOs

./: .gitignore  README.md
apps/backend/: README.md  pyproject.toml
apps/backend/app/: __init__.py  main.py  schemas.py
apps/backend/app/routers/: fire.py  market.py  paytm.py  portfolio.py  projection.py  swp.py
apps/backend/tests/: test_fire_swp_api.py  test_portfolio_api.py  test_projection_api.py
apps/frontend/: .env.local.example  .gitignore  package-lock.json  package.json
apps/frontend/app/: components.tsx  layout.tsx  lib.ts  page.tsx
scripts/: dev.sh
