[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "wealthos-backend"
version = "0.1.0"
description = "WealthOS API. Thin HTTP layer over the financial engine."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.6",
    # The financial engine is a local package; install it editable first:
    #   pip install -e packages/financial-engine
    "wealthos-financial-engine",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
    "ruff>=0.5",
    "black>=24.0",
    "isort>=5.13",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 100

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "RUF"]
